Issue 77: Publish Franca on Maven Central >>adjusted parent pom according to sonatype doc "Deploy Snapshots and Stage Releases with Maven", refer to http://tinyurl.com/kclg456